--- a/popup.html
+++ b/popup.html
@@ -4,19 +4,15 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Domain Changer</title>
+    <title>My STOCK</title>
     <style>
-        BODY {width : 800px; min-height:100px;}
+        BODY {width : 500px; min-height:100px;}
     </style>
     <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
 </head>
 <body>
 <div class="container">
     <div class="panel panel-primary" style="margin-top: 10px;">
-        <div class=panel-heading>
-            <h3 class=panel-title>My Stock</h3>
-        </div>
-
         <nav class="navbar navbar-default">
             <div class="container-fluid">
                 <!-- Brand and toggle get grouped for better mobile display -->
@@ -27,7 +23,7 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" href="#">Brand</a>
+                    <a class="navbar-brand" href="#">My Stock</a>
                 </div>
 
                 <!-- Collect the nav links, forms, and other content for toggling -->
@@ -42,12 +38,14 @@
             </div><!-- /.container-fluid -->
         </nav>
 
-        <div class=panel-body style="padding-top:0px;">
-            <div class="row" id="search">
+        <div id="panel_search" class=panel-body style="padding-top:0px;display:none;">
+            <div>검색 결과</div>
+            <div class="row" id="search" style="" >
             </div>
         </div>
 
         <div class=panel-body style="padding-top:0px;">
+            <div>관심 종목</div>
             <div class="row" id="interest">
             </div>
         </div>
