--- a/popup.html
+++ b/popup.html
@@ -3,10 +3,11 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta http-equiv="Content-Security-Policy" content="default-src *; style-src 'self' http://* 'unsafe-inline'; script-src 'self' http://* 'unsafe-inline' 'unsafe-eval'" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>My STOCK</title>
     <style>
-        BODY {width : 500px; min-height:100px;}
+        BODY {width : 700px; min-height:100px;}
     </style>
     <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
 </head>
